{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "178625ea-dd11-4e3b-a5c9-2640ebea34e8",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "1ef385ea-17c4-4289-8199-6f5612e63f75",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "bc584760-cdae-4bcf-916b-cb0e7578a18d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bf65d89d-2595-4150-857c-93b549288e83",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "37d0ff1e-e108-4dd6-9f27-e35eee7931ab",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}